v2/internal/nsz.repo.hu/libc-test/src/api/wchar.o.err
src/api/wchar.c: In function ‘f’:
src/api/wchar.c:10:3: error: ‘va_list’ undeclared (first use in this function)
   10 | T(va_list)
      |   ^~~~~~~
src/api/wchar.c:2:15: note: in definition of macro ‘T’
    2 | #define T(t) (t*)0;
      |               ^
src/api/wchar.c:2:1: note: ‘va_list’ is defined in header ‘<stdarg.h>’; did you forget to ‘#include <stdarg.h>’?
    1 | #include <wchar.h>
  +++ |+#include <stdarg.h>
    2 | #define T(t) (t*)0;
src/api/wchar.c:10:3: note: each undeclared identifier is reported only once for each function it appears in
   10 | T(va_list)
      |   ^~~~~~~
src/api/wchar.c:2:15: note: in definition of macro ‘T’
    2 | #define T(t) (t*)0;
      |               ^
src/api/wchar.c:2:17: error: expected expression before ‘)’ token
    2 | #define T(t) (t*)0;
      |                 ^
src/api/wchar.c:10:1: note: in expansion of macro ‘T’
   10 | T(va_list)
      | ^
src/api/wchar.c:40:47: error: expected declaration specifiers or ‘...’ before ‘va_list’
   40 | {int(*p)(FILE*restrict,const wchar_t*restrict,va_list) = vfwprintf;}
      |                                               ^~~~~~~
src/api/wchar.c:41:47: error: expected declaration specifiers or ‘...’ before ‘va_list’
   41 | {int(*p)(FILE*restrict,const wchar_t*restrict,va_list) = vfwscanf;}
      |                                               ^~~~~~~
src/api/wchar.c:42:57: error: expected declaration specifiers or ‘...’ before ‘va_list’
   42 | {int(*p)(wchar_t*restrict,size_t,const wchar_t*restrict,va_list) = vswprintf;}
      |                                                         ^~~~~~~
src/api/wchar.c:43:56: error: expected declaration specifiers or ‘...’ before ‘va_list’
   43 | {int(*p)(const wchar_t*restrict,const wchar_t*restrict,va_list) = vswscanf;}
      |                                                        ^~~~~~~
src/api/wchar.c:44:33: error: expected declaration specifiers or ‘...’ before ‘va_list’
   44 | {int(*p)(const wchar_t*restrict,va_list) = vwprintf;}
      |                                 ^~~~~~~
src/api/wchar.c:45:33: error: expected declaration specifiers or ‘...’ before ‘va_list’
   45 | {int(*p)(const wchar_t*restrict,va_list) = vwscanf;}
      |                                 ^~~~~~~
exit status 1
